Fixed main padding on mobile screens

--- a/next-app/src/app/globals.scss
+++ b/next-app/src/app/globals.scss
@@ -32,7 +32,7 @@ body {
 
 main {
   width: 100%;
-  padding: 120px 24px;
+  padding: 48px 24px;
   display: flex;
   flex-direction: column;
   gap: 40px;
